# advent-of-code-2024

./: Cargo.toml  README.md  justfile
src/: lib.rs
