[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
color-eyre = "0.6.3"
derive_more = { version = "1.0.0", features = ["full"] }
eyre = "0.6.12"
itertools = "0.13.0"
regex = "1.11.1"
rustc-hash = "2.1.0"
thiserror = "2.0.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
